--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -1,32 +1,10 @@
 
 
-<!--  <div class="header">-->
-<!--    <div class = "log">-->
-<!--      <a href="/" class="logo"> <img src="./assets/1.jpg" height="125" width="125"></a>-->
-<!--    </div>-->
-<!--    <div class = "red">-->
-<!--    <input type="text" placeholder="Search"  required autocomplete="off">-->
-<!--    <button type="button" class="btn-top">Search</button>-->
-<!--    </div>-->
-<!--  <div>-->
-<!--    <ul class="TopMenu">-->
-<!--      <li><a href="#"> How We Work</a> </li>-->
-<!--      <li><a href="#21">Shops</a> </li>-->
-<!--      <li><a href="#22">Plans</a> </li>-->
-<!--    </ul>-->
-<!--  </div>-->
-<!--  <div class = "batons">-->
-<!--      <a href="#22">Sign In</a>-->
-<!--      <a href="#22">Join The Movement</a>-->
-<!--  </div>-->
-<!--  </div>-->
-<!--<hr>-->
-
 <header>
         <a href="/" class="logo"> <img src="./assets/1.jpg" height="125" width="125"></a>
   <form>
-    <label for="searcher">Suka:</label>
-    <input type="text" placeholder="sosat' chlen" id="searcher">
+    <label for="searcher">Test:</label>
+    <input type="text" placeholder="Search" id="searcher">
   </form>
 
   <nav>
@@ -44,10 +22,4 @@
   </div>
 </header>
 
-<!--<div class="outer">-->
-<!--  <div class="inner">div</div>-->
-<!--  <div class="inner">div</div>-->
-<!--  <div class="inner">div</div>-->
-<!--  <div class="inner">div</div>-->
-<!--</div>-->
 
