--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -2,3 +2,4 @@
 амгнрвирпаивор
 <!--<a href="/" class="logo"> <img src="file:///C:/Users/Vlad/WebstormProjects/coursework/project/res/log.jpg" alt="test"></a>-->
 <img src="./assets/1.jpg" alt="смайлик" height="30" width="30">
+<app-product></app-product>
