--- a/project/src/app/product/product.component.html
+++ b/project/src/app/product/product.component.html
@@ -1,1 +1,8 @@
-<p>product works!</p>
+11
+<div class="outerbox">
+<a *ngFor="let counter of product" >
+  <div class="box">
+    <h4>{{counter.name}}</h4>
+  </div>
+</a>
+</div>
