--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-top-bar> </app-top-bar>
-амгнрвирпаивор
-<!--<a href="/" class="logo"> <img src="file:///C:/Users/Vlad/WebstormProjects/coursework/project/res/log.jpg" alt="test"></a>-->
-<img src="./assets/1.jpg" alt="смайлик" height="30" width="30">
-<app-product></app-product>
+<app-top-bar></app-top-bar>
+<router-outlet></router-outlet>
+
+<!--амгнрвирпаивор-->
+<!--&lt;!&ndash;<a href="/" class="logo"> <img src="file:///C:/Users/Vlad/WebstormProjects/coursework/project/res/log.jpg" alt="test"></a>&ndash;&gt;-->
+<!--<img src="./assets/1.jpg" alt="смайлик" height="30" width="30">-->
+<!--<app-product></app-product>-->
