--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -1,23 +1,23 @@
-
-
 <header>
-        <a href="/" class="logo"> <img src="./assets/1.jpg" height="125" width="125"></a>
-  <form>
-    <label for="searcher">Test:</label>
-    <input type="text" placeholder="Search" id="searcher">
-  </form>
+  <div class="logo">
+    <a href="/" >
+      <img src="/assets/lettuce1.png" alt="Logo">
+      <p class="logoName">Fresh store</p>
+    </a>
+  </div>
 
   <nav>
     <div class="navigation">
       <ul>
         <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
         <li><a href="#"><i class="fas fa-shopping-cart"></i>About</a></li>
+        <li><a href="#"><i class="fas fa-address-book"></i>Gallery</a></li>
         <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
       </ul>
     </div>
   </nav>
   <div class="register-btn">
-    <a href="#">Regsiter</a>
+    <a routerLink="login">Regsiter</a>
     <a href="#">Login</a>
   </div>
 </header>
