--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -1,12 +1,34 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+</head>
+<header>
+  <select id="spec">
+    <option value="math">Math</option>
+    <option value="art">Art</option>
+    <option value="literature">Literature</option>
+    <option value="dataScience">Data Science</option>
+    <option value="history">History</option>
+    <option value="psychology">Psychology</option>
+    <option value="biology">Biology</option>
+    <option value="physics">Physics</option>
+  </select>
+  <form>
+    <label for="searcher">Test:</label>
+    <input type="text" placeholder="Search" id="searcher">
+  </form>
+  <button mat-icon-button >
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
 
-амгнрвирпаивор
-<!--<a href="/" class="logo"> <img src="file:///C:/Users/Vlad/WebstormProjects/coursework/project/res/log.jpg" alt="test"></a>-->
-<img src="./assets/1.jpg" alt="смайлик" height="30" width="30">
+</header>
+<body>
 <app-product></app-product>
 
-<!--<app-top-bar></app-top-bar>-->
-
-<!--<div class="container">-->
-<!--  <router-outlet></router-outlet>-->
-<!--</div>-->
+</body>
+</html>
