Home and Product

--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -5,29 +5,16 @@
   <title>Title</title>
 </head>
 <header>
-  <select id="spec">
-    <option value="math">Math</option>
-    <option value="art">Art</option>
-    <option value="literature">Literature</option>
-    <option value="dataScience">Data Science</option>
-    <option value="history">History</option>
-    <option value="psychology">Psychology</option>
-    <option value="biology">Biology</option>
-    <option value="physics">Physics</option>
-  </select>
-  <form>
-    <label for="searcher">Test:</label>
-    <input type="text" placeholder="Search" id="searcher">
-  </form>
-  <button mat-icon-button >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-  <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-
+  <img src="/assets/1.png" alt="Logo">
+  <div class="Welcome">
+    <h1>Добро пожаловать в Fresh Store!</h1>
+  </div>
 </header>
 <body>
+<div>
+
+</div>
+
 <app-product></app-product>
 
 </body>
