--- a/project/src/app/product/product.component.html
+++ b/project/src/app/product/product.component.html
@@ -1,10 +1,52 @@
+<body>
 
-<div class="outerbox">
-<a *ngFor="let counter of product"  routerLink="/detail/{{counter.id}}">>
-  <div class="box">
-    <img src="./assets/1.jpg" alt="смайлик" height="90" width="90">
-    <h4>{{counter.name}}</h4>
-  </div>
-</a>
+
+<!--<div class="outerbox">-->
+<!--<a *ngFor="let counter of product"  routerLink="/detail/{{counter.id}}">>-->
+<!--  <div class="box">-->
+<!--    <img src="./assets/1.jpg" alt="смайлик" height="90" width="90">-->
+<!--    <h4>{{counter.name}}</h4>-->
+<!--  </div>-->
+<!--</a>-->
+<!--</div>-->
+<div class="lineWithText">
+  <div class="lines"></div>
+  <p>Some Text</p>
+  <div class="lines"></div>
 </div>
 
+<div class="topTeachers">
+  <div class="teacher">
+    <div class="teacherCard">
+
+        <img src="./assets/cucumber.png" alt="Avatar" class="avatar">
+      <!--            <img src="res/1.png" alt="смайлик" >-->
+      <h2>
+        First Name Last Name
+      </h2>
+      <h3>
+        Speciality
+      </h3>
+      <h4>
+        Country
+      </h4>
+    </div>
+    <div class="teacherCard">
+        <img src="./assets/8.jpg" alt="Avatar" class="avatar">
+      <!--            <img src="res/1.png" alt="смайлик" >-->
+      <h2>
+        First Name Last Name
+      </h2>
+      <h3>
+        Speciality
+      </h3>
+      <h4>
+        Country
+      </h4>
+    </div>
+  </div>
+</div>
+
+<!--<div class="line"></div>-->
+
+</body>
