--- a/project/src/app/home/top-bar/top-bar.component.css
+++ b/project/src/app/home/top-bar/top-bar.component.css
@@ -27,12 +27,6 @@ header {
 .logo {
   margin-left: 4.19%;
   width: 20%;
-
-  /*font-size: 5vmin;*/
-  /*font-weight: 900;*/
-  /*margin: 20px;*/
-  /*background-image:url("/assets/lettuce1.svg");*/
-  /*width: 100%;*/
 }
 .logo a{
   display:flex;
@@ -43,7 +37,6 @@ header {
 
 }
 .logo p{
-
   font-family: 'Charm', cursive;
   color: #008705;
 }
@@ -63,7 +56,7 @@ input {
 }
 
 input:hover {
-  background: rgba(0, 0, 0, 0.1);
+  background: #F1F1F1;
 }
 
 .navigation ul{
@@ -95,4 +88,45 @@ input:hover {
   box-shadow: 0px 0px 10px black;
   background: rgba(0, 0, 0, 0.3);
   font-weight: 900;
+}
+
+
+.headerSearch{
+  background-color: #ABCB9C;
+  display: flex;
+  height: 69px;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+}
+.headerSearch select{
+  height: 54px;
+  width: 10%;
+  border-radius: 12px;
+  background-color: #499227;
+  /*margin-left: 11.3%;*/
+
+  color: black;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+.headerSearch form{
+  width: 37.5%;
+}
+.headerSearch input {
+  font-size: 3vmin;
+  border: 2px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  width: 100%;
+  height: 54px;
+}
+.headerSearch nav{
+
+}
+.headerSearch nav button{
+  background: #499227;
+  margin: 5px;
 }
