--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -22,4 +22,24 @@
   </div>
 </header>
 
+<div class="headerSearch">
+  <select id="spec">
+    <option value="math">Math</option>
+    <option value="art">Art</option>
+    <option value="literature">Literature</option>
+    <option value="dataScience">Data Science</option>
+    <option value="history">History</option>
+    <option value="psychology">Psychology</option>
+    <option value="biology">Biology</option>
+    <option value="physics">Physics</option>
+  </select>
+  <form>
+    <input type="text" placeholder="Search" id="searcher">
+  </form>
+  <nav>
+    <button mat-icon-button > <mat-icon>favorite</mat-icon></button>
+    <button mat-icon-button > <mat-icon>person</mat-icon></button>
+    <button mat-icon-button > <mat-icon>shopping_cart</mat-icon></button>
+  </nav>
 
+</div>
