Home and Product buttons

--- a/project/src/app/product/product.component.html
+++ b/project/src/app/product/product.component.html
@@ -9,13 +9,14 @@
 <!--  </div>-->
 <!--</a>-->
 <!--</div>-->
-<div class="lineWithText">
-  <div class="lines"></div>
-  <p>Some Text</p>
-  <div class="lines"></div>
-</div>
+
 
 <div class="topTeachers">
+  <nav>
+    <button>Все</button>
+    <button>Хіти продажу</button>
+    <button>Новинки</button>
+  </nav>
   <div class="teacher">
     <div class="teacherCard">
 
