--- a/project/src/app/home/home.component.css
+++ b/project/src/app/home/home.component.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Charm&family=Fruktur&family=Montserrat:ital,wght@1,100&display=swap');
+body{
+  margin-right: 11%;
+  margin-left: 11%;
+}
+
 header{
   width: 100%;
   height: 700px;
@@ -13,6 +18,7 @@ img {
   height: 700px;
 
   width: 100%;
+  object-fit: cover;
   /*z-index: 1;*/
 
 }
@@ -28,4 +34,23 @@ header .Welcome{
   line-height: 61px;
   letter-spacing: 0.02em;
   text-align: center;
+}
+
+.lineWithText{
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+}
+.lines {
+  padding-top: 50px;
+  height: 1px;
+  border-bottom: 1px solid black;
+  justify-content: center;
+
+  width: 40%;
+}
+p{
+  padding-top: 35px;
+  text-align: center;
+  margin: 0 auto;
 }
