--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -14,8 +14,15 @@
 <div>
 
 </div>
-
+<div class="lineWithText">
+  <div class="lines"></div>
+  <p>Reduces and propositions</p>
+  <div class="lines"></div>
+</div>
 <app-product></app-product>
 
 </body>
+<footer>
+  <app-footer></app-footer>
+</footer>
 </html>
