--- a/project/src/app/product/product.component.css
+++ b/project/src/app/product/product.component.css
@@ -1,8 +1,8 @@
 
-body{
-  margin-right: 11%;
-  margin-left: 11%;
-}
+/*body{*/
+/*  margin-right: 11%;*/
+/*  margin-left: 11%;*/
+/*}*/
 
 /*.outerbox {*/
 /*  background-color: lightblue;*/
@@ -31,6 +31,28 @@ body{
   display: flex;
   flex-direction: column;
 }
+.topTeachers nav{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 71px 10px;
+  width: 25%;
+  height: 60px;
+}
+.topTeachers nav button{
+  text-align: center;
+  font-size: 2.7vmin;
+  background: #ABCB9C;
+  border: none;
+  padding: 0 10px;
+  margin-right: 4px;
+
+
+}
+
+.topTeachers nav button:hover{
+  font-size: 2.5vmin;
+  background:#008705;
+}
 
 .topTeachers h1 {
   margin-left: auto;
@@ -46,7 +68,7 @@ body{
 
 .topTeachers form {
   display: flex;
-  flex-direction: row;
+ flex-direction: row;
   align-items: center;
   justify-content: space-between;
   /*padding-top: 40px;*/
@@ -118,7 +140,7 @@ body{
   border-bottom: 1px solid black;
   justify-content: center;
 
-  width: 43%;
+  width: 40%;
 }
 p{
   padding-top: 35px;
