Home and Product buttons

--- a/project/src/app/product/product.component.html
+++ b/project/src/app/product/product.component.html
@@ -1,6 +1,5 @@
 <body>
 
-
 <!--<div class="outerbox">-->
 <!--<a *ngFor="let counter of product"  routerLink="/detail/{{counter.id}}">>-->
 <!--  <div class="box">-->
@@ -11,28 +10,27 @@
 <!--</div>-->
 
 
-<div class="topTeachers">
+<div class="listProduct">
   <nav>
     <button>Все</button>
     <button>Хіти продажу</button>
     <button>Новинки</button>
   </nav>
-  <div class="teacher">
-    <div class="teacherCard">
-
-        <img src="./assets/cucumber.png" alt="Avatar" class="avatar">
-      <!--            <img src="res/1.png" alt="смайлик" >-->
-      <h2>
-        First Name Last Name
-      </h2>
-      <h3>
-        Speciality
-      </h3>
-      <h4>
-        Country
-      </h4>
+  <div class="product">
+    <div class="productCard">
+      <img src="./assets/cucumber.png" alt="Avatar" class="avatar">
+        <p>1</p>
+      <!--      <h2>-->
+<!--        First Name Last Name-->
+<!--      </h2>-->
+<!--      <h3>-->
+<!--        Speciality-->
+<!--      </h3>-->
+<!--      <h4>-->
+<!--        Country-->
+<!--      </h4>-->
     </div>
-    <div class="teacherCard">
+    <div class="productCard">
         <img src="./assets/8.jpg" alt="Avatar" class="avatar">
       <!--            <img src="res/1.png" alt="смайлик" >-->
       <h2>
