--- a/project/src/app/product/product.component.css
+++ b/project/src/app/product/product.component.css
@@ -25,93 +25,62 @@
 /*}*/
 
 
-
-.topTeachers {
+.listProduct {
   margin: 25px 0 25px;
   display: flex;
   flex-direction: column;
 }
-.topTeachers nav{
+.listProduct nav{
   display: flex;
   justify-content: space-between;
   margin: 0 0 71px 10px;
   width: 25%;
   height: 60px;
 }
-.topTeachers nav button{
+.listProduct nav button{
   text-align: center;
   font-size: 2.7vmin;
   background: #ABCB9C;
   border: none;
   padding: 0 10px;
   margin-right: 4px;
-
-
 }
 
-.topTeachers nav button:hover{
+.listProduct nav button:hover{
   font-size: 2.5vmin;
   background:#008705;
 }
 
-.topTeachers h1 {
-  margin-left: auto;
-  margin-right: auto;
-}
 
-.topTeachers form .line-vertical {
-  border: 1px dashed grey;
-  margin: 0 30px;
-  /*flex: 1;*/
-  align-self: stretch;
-}
-
-.topTeachers form {
-  display: flex;
- flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  /*padding-top: 40px;*/
-  margin: 40px 0 40px 0;
-
-}
-
-.topTeachers form select {
-  width: 9%;
-}
-
-.topTeachers form label {
-  font-size: 24px;
-  margin: 0 15px;
-}
-
-.topTeachers .teacher {
-  /*display: flex;*/
-  /*flex-wrap: wrap;*/
-  /*flex-direction: row;*/
-  /*justify-content: space-between;*/
+.listProduct .product {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(264px, 1fr));
-  /*grid-template-columns: auto auto auto auto auto;*/
+  grid-template-columns: repeat(auto-fill, minmax(244px, 1fr));
+  /*grid-row-gap: 50px;*/
+  grid-column-gap: 50px;
 }
 
 
-.topTeachers .teacher .teacherCard {
+.listProduct .product .productCard {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  background: #F1F1F1;
 }
 
-.topTeachers .teacher .teacherCard img {
-  width: 90%;
-  margin: 5%;
+.listProduct .product .productCard img {
+  width: 100%;
+  /*margin: 5%;*/
   /*height: 200px;*/
-  border-radius: 50%;
+  /*border-radius: 50%;*/
 
 }
-
-.topTeachers .teacher .teacherCard h2, h3, h4 {
+.productCard p{
+  padding-top: 10px;
+  align-items: flex-start;
+  text-align: left;
+}
+.listProduct .product .productCard h2, h3, h4 {
   text-align: center;
   padding: 0 50px;
 }
@@ -127,23 +96,4 @@
   justify-content: center;
 
   width: 100%;
-}
-
-.lineWithText{
-  display: flex;
-  flex-direction: row;
-  height: 100px;
-}
-.lines {
-  padding-top: 50px;
-  height: 1px;
-  border-bottom: 1px solid black;
-  justify-content: center;
-
-  width: 40%;
-}
-p{
-  padding-top: 35px;
-  text-align: center;
-  margin: 0 auto;
 }
