--- a/project/src/app/product/product.component.html
+++ b/project/src/app/product/product.component.html
@@ -19,7 +19,9 @@
   <div class="product">
     <div class="productCard">
       <img src="./assets/cucumber.png" alt="Avatar" class="avatar">
+      <div class="one">
         <p>1</p>
+      </div>
       <!--      <h2>-->
 <!--        First Name Last Name-->
 <!--      </h2>-->
