--- a/project/src/app/product/product-info/product-info.component.html
+++ b/project/src/app/product/product-info/product-info.component.html
@@ -1,36 +1,81 @@
+<!--<body>-->
+<!--<article>-->
+<!--  <picture>-->
+<!--    <img src="{{product.logos}}">-->
+<!--  </picture>-->
+<!--  <div class="description">-->
+<!--    <h1>-->
+<!--      {{product.title}}-->
+<!--    </h1>-->
+<!--    <br>-->
+<!--    <p>-->
+<!--    {{product.description}}-->
+<!--    </p>-->
+<!--    <nav>-->
+<!--      <div class="navigation">-->
+<!--        <ul>-->
+<!--          <li><a href="#"><i class="fas fa-home"></i>Description</a></li>-->
+<!--          <li><a href="#"><i class="fas fa-shopping-cart"></i>Specifications</a></li>-->
+<!--          <li><a href="#"><i class="fas fa-address-book"></i>Reviews</a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </nav>-->
+<!--  </div>-->
+<!--  <div class="PriceCard">-->
+<!--    <div class="Price">-->
+<!--      <div class="OldPrice"></div>-->
+<!--      {{product.oldPrice}}-->
+<!--      {{product.Price}}-->
+<!--    </div>-->
+<!--    <button>Buy</button>-->
+<!--    <button mat-icon-button aria-label="Example icon-button with a heart icon">-->
+<!--      <mat-icon>favorite</mat-icon>-->
+<!--    </button>-->
+<!--  </div>-->
+<!--</article>-->
+<!--</body>-->
+
 <body>
-<article>
+<div class="product">
+<div class="content">
   <picture>
-    <img src="{{product.logos}}">
+    <img src="{{product.logos}}" alt="Product">
   </picture>
-  <div class="description">
+  <div class="productMainInfo">
     <h1>
       {{product.title}}
     </h1>
-    <br>
-    <p>
-    {{product.description}}
-    </p>
-    <nav>
-      <div class="navigation">
-        <ul>
-          <li><a href="#"><i class="fas fa-home"></i>Description</a></li>
-          <li><a href="#"><i class="fas fa-shopping-cart"></i>Specifications</a></li>
-          <li><a href="#"><i class="fas fa-address-book"></i>Reviews</a></li>
-        </ul>
+    <div class="productButtons" >
+      <div class="price">
+        <p>25грн</p>
       </div>
-    </nav>
-  </div>
-  <div class="PriceCard">
-    <div class="Price">
-      <div class="OldPrice"></div>
-      {{product.oldPrice}}
-      {{product.Price}}
+      <div class="productBuyButton">
+        121
+      </div>
+      <div class="favorite">
+        2121
+      </div>
     </div>
-    <button>Buy</button>
-    <button mat-icon-button aria-label="Example icon-button with a heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
+    <div class="descriptions">
+      2121212
+      21212
+      3334
+      222
+    </div>
+    <div class="productStatus">
+      121233
+    </div>
+    <div class="productCharacteristic">
+
+    </div>
+    Склад продукту/Країна походження:
+
+    Україна.
   </div>
-</article>
+</div>
+<div class="description">
+kjoikfjoijoiwjiojiojgojrowJEOJJXCIFOJSIDFWJEIO
+</div>
+</div>
+
 </body>
