--- a/project/src/app/product/product-info/product-info.component.css
+++ b/project/src/app/product/product-info/product-info.component.css
@@ -1,62 +1,102 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');*/
 
-body {
-  background-color: antiquewhite;
-  padding-left: 50px;
-  padding-top: 15px;
-  padding-right: 50px;
-  font-family: 'Poppins', sans-serif;
+/*body {*/
+/*  background-color: antiquewhite;*/
+/*  padding-left: 50px;*/
+/*  padding-top: 15px;*/
+/*  padding-right: 50px;*/
+/*  font-family: 'Poppins', sans-serif;*/
+/*  font-size: 18px;*/
+
+/*}*/
+/*a {*/
+/*  text-decoration: none;*/
+/*}*/
+/*article {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+
+/*}*/
+/*article picture {*/
+/*  width: 30%;*/
+/*}*/
+/*picture img {*/
+/*  width: 80%;*/
+/*  !*width: 300px;*!*/
+/*  !*height: 300px;*!*/
+/*}*/
+
+/*article .description {*/
+/*  width: 70%;*/
+/*  !*background-color: aqua;*!*/
+/*  padding-top: 15px;*/
+/*}*/
+/*article .description h1 {*/
+/*  font-weight: unset;*/
+/*}*/
+/*article .description p {*/
+/*  margin-bottom: 35px;*/
+/*  border-bottom: 1px solid black;*/
+/*}*/
+/*article .PriceCard {*/
+/*  width: 20%;*/
+/*}*/
+/*article .description nav ul{*/
+/*  display: flex;*/
+/*}*/
+/*article .description nav ul li{*/
+/*  list-style: none;*/
+/*  !*border: 0.1px solid red;*!*/
+/*  margin-right: 50px;*/
+/*  font-size: 20px;*/
+
+/*}*/
+/*article .description nav ul li a{*/
+/*  color: black;*/
+/*  !*margin-right: 50px;*!*/
+/*  transition: 0.5s ease;*/
+/*  font-weight: bold;*/
+/*}*/
+.product {
+  margin: 100px 180px 0 180px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  /*justify-content: space-between;*/
+}
+
+.productMainInfo {
+  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.productButtons {
+  margin-top: 37px;
+  display: flex;
+  flex-direction: row;
+  height: 50px ;
+
+}
+
+.productButtons .price {
+  height: 100%;
+  /*margin-left: 12px;*/
+  background: #ABCB9C;
   font-size: 18px;
-
-}
-a {
-  text-decoration: none;
-}
-article {
-  display: flex;
-  justify-content: space-between;
-
-}
-article picture {
-  width: 30%;
-}
-picture img {
-  width: 80%;
-  /*width: 300px;*/
-  /*height: 300px;*/
-}
-
-article .description {
-  width: 70%;
-  /*background-color: aqua;*/
-  padding-top: 15px;
-}
-article .description h1 {
-  font-weight: unset;
-}
-article .description p {
-  margin-bottom: 35px;
-  border-bottom: 1px solid black;
-}
-article .PriceCard {
   width: 20%;
-}
-article .description nav ul{
   display: flex;
-}
-article .description nav ul li{
-  list-style: none;
-  /*border: 0.1px solid red;*/
-  margin-right: 50px;
-  font-size: 20px;
+  flex-direction: row;
+  justify-content: space-around;
 
 }
-article .description nav ul li a{
-  color: black;
-  /*margin-right: 50px;*/
-  transition: 0.5s ease;
-  font-weight: bold;
+
+.productButtons .price p {
+  text-align: center;
+  align-self: center;
+
 }
-
-
-
