--- a/project/src/app/product/product.component.css
+++ b/project/src/app/product/product.component.css
@@ -55,7 +55,7 @@
 .listProduct .product {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(244px, 1fr));
-  /*grid-row-gap: 50px;*/
+  grid-row-gap: 50px;
   grid-column-gap: 50px;
 }
 
@@ -70,36 +70,45 @@
 
 .listProduct .product .productCard img {
   width: 100%;
-  /*margin: 5%;*/
-  /*height: 200px;*/
-  /*border-radius: 50%;*/
-
 }
-.productCard .one{
-  width: 10%;
-  background-color: #008705;
+.productCard .nameProduct{
+  margin: 15px 0 0 17px;
   align-self: flex-start;
+  /*font-family: 'Montserrat', sans-serif;*/
+
+  color: #000000;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 24px;
 
 }
-.productCard p{
-  padding-top: 10px;
-  align-items: flex-start;
-  text-align: left;
-}
-.listProduct .product .productCard h2, h3, h4 {
+.productCard .price{
+  width: 40%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  /*margin-right: 5px;*/
+  margin: 11px 10px 10px 0;
+  font-size: 18px;
+
+  align-self: flex-end;
   text-align: center;
-  padding: 0 50px;
+}
+.productCard .price svg{
+}
+.productCard .price div{
+  height: 100%;
+  margin-left: 12px;
+  width: 75%;
+  background: #ABCB9C;
+}
+.productCard .price div p{
+  padding-top: 3px;
+  text-align: center;
+  align-self: center;
+
 }
 
-/*.line {*/
 
-/*  border: 1px solid black;*/
-/*  margin: 200px auto;*/
-/*  width: 100%;*/
-/*!*}*!*/
-.line {
-  border-bottom: 1px solid black;
-  justify-content: center;
 
-  width: 100%;
-}
+
