--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Charm&family=Fruktur&family=Montserrat:ital,wght@1,100&display=swap');
+
 * {
   margin:0;
   padding:0;
@@ -6,4 +8,4 @@
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/*body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }*/
