--- a/project/src/app/product/product-info/product-info.component.css
+++ b/project/src/app/product/product-info/product-info.component.css
@@ -58,7 +58,7 @@
 /*  font-weight: bold;*/
 /*}*/
 .product {
-  margin: 100px 180px 0 180px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -79,24 +79,78 @@
   margin-top: 37px;
   display: flex;
   flex-direction: row;
-  height: 50px ;
-
+  align-content: center;
+  justify-content: space-between;
+  height: 50px;
+  text-align: center;
 }
 
-.productButtons .price {
-  height: 100%;
-  /*margin-left: 12px;*/
-  background: #ABCB9C;
-  font-size: 18px;
-  width: 20%;
+.productBuyButton:first-child {
+  margin-right: 10px;
+}
+
+.price-text {
+  background-color: #ABCB9C;
+  width: max(50px, auto);
+}
+
+.buy {
+  width: max(100px, auto);
+}
+
+.button {
+  user-select: none;
+  cursor: pointer;
+}
+
+.productButton {
+  padding: 2px 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-
+  align-items: center;
+  background: #499227;
+  margin-right: 5px
 }
 
-.productButtons .price p {
+.productButton:hover {
+  background: #4567;
+  color: white
+}
+
+.productButtons .productBuyButton svg {
+  margin-left: 7px;
+}
+
+.productButtons .productBuyButton p {
+  margin: 0 20px;
+  font-size: 24px;
+}
+
+.productButtons .productBuyButton p, svg {
   text-align: center;
   align-self: center;
+}
 
+.productButtons .favorite {
+  display: flex;
+  flex-direction: row;
+  align-items: center
+}
+
+@media screen and (max-width: 520px) {
+  .product {
+    flex-direction: column;
+  }
+
+  div.img-item-content {
+    width: 100%;
+    margin: 0 20px 10px;
+  }
+
+  .productMainInfo {
+    margin: 0 20px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
