--- a/project/src/app/product/product-info/product-info.component.html
+++ b/project/src/app/product/product-info/product-info.component.html
@@ -37,45 +37,63 @@
 
 <body>
 <div class="product">
-<div class="content">
-  <picture>
-    <img src="{{product.logos}}" alt="Product">
-  </picture>
-  <div class="productMainInfo">
-    <h1>
-      {{product.title}}
-    </h1>
-    <div class="productButtons" >
-      <div class="price">
-        <p>25грн</p>
-      </div>
-      <div class="productBuyButton">
-        121
-      </div>
-      <div class="favorite">
-        2121
-      </div>
-    </div>
-    <div class="descriptions">
-      2121212
-      21212
-      3334
-      222
-    </div>
-    <div class="productStatus">
-      121233
-    </div>
-    <div class="productCharacteristic">
 
-    </div>
-    Склад продукту/Країна походження:
 
-    Україна.
+  <div class="content">
+
+    <div class="img-item-content">
+      <img src="{{product.logos}}" alt="Product" class="img-product">
+    </div>
+    <div class="productMainInfo">
+      <div class="content-item">
+        <h1>
+          {{product.title}}
+        </h1>
+      </div>
+      <div class="content-item">
+        <div class="productButtons">
+          <div class="productButton price-text button">
+            <p>25грн</p>
+          </div>
+          <div class="productButton buy button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-cart4"
+                 viewBox="0 0 16 16">
+              <path
+                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+            </svg>
+            <p>Купити</p>
+          </div>
+          <div class="productButton add-to-favorite button">
+            <mat-icon>favorite</mat-icon>
+            <div>Додати в мої товари</div>
+          </div>
+        </div>
+      </div>
+      <div class="content-item">
+        <div class="descriptions">
+          2121212
+          21212
+          3334
+          222
+        </div>
+        <div class="productStatus">
+          121233
+        </div>
+        <div class="productCharacteristic">
+          Склад продукту/Країна походження:
+
+          Україна.
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div class="description">
-kjoikfjoijoiwjiojiojgojrowJEOJJXCIFOJSIDFWJEIO
-</div>
+  <div class="content">
+    <div class="description">
+      <p>
+        78e978e9782e979797937819vddgdddddddddddddddddddddddgdddd
+      </p>
+    </div>
+  </div>
 </div>
 
 </body>
