--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -1,6 +1,7 @@
 <header>
   <div class="logo">
-    <a href="/" >
+<!--    <a href="/" >-->
+    <a routerLink="..">
       <img src="/assets/lettuce1.png" alt="Logo">
       <p class="logoName">Fresh store</p>
     </a>
