--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -40,7 +40,7 @@
   <nav>
     <button mat-icon-button > <mat-icon>favorite</mat-icon></button>
     <button mat-icon-button > <mat-icon>person</mat-icon></button>
-    <button mat-icon-button > <mat-icon>shopping_cart</mat-icon></button>
+    <button mat-icon-button routerLink="cart"Regsiter> <mat-icon>shopping_cart</mat-icon></button>
   </nav>
 
 </div>
