--- a/project/src/app/shoping-card/shoping-card.component.css
+++ b/project/src/app/shoping-card/shoping-card.component.css
@@ -1,10 +1,34 @@
+
 body{
   background-color: gold;
 }
-.shoppingCart{
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.form{
+  padding: 0;
+}
+.font{
+  font-size:  3vmin;
 
-  margin: 10px 25% 0 25%;
+}
+.popupHeader{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+.popupHeader div:hover {
+  cursor: pointer;
+  color: #499227;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.shoppingCart{
+  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
+
+  /*margin: 10px 25% 0 25%;*/
+  margin-top: 10px;
   /*background-color: aqua;*/
   display: flex;
   flex-direction: column;
@@ -14,14 +38,16 @@ body{
   margin: 10px 25% 0 25%;
 
 }
+.line{
+  border-bottom: 1px solid #eeeeee;
 
+}
 .item{
   height: 185px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-
 }
 .button{
 
@@ -36,7 +62,7 @@ img{
 .descriptions{
   width: 30%;
   margin-left: 20px;
-  font-size:  2.5vmin;
+  /*font-size:  2.5vmin;*/
 }
 .descriptions p{
   width: 100%;
@@ -59,5 +85,38 @@ img{
 }
 .price{
   font-size:  2.5vmin;
+}
+.popupFooter{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 25px 25px;
+  height: 50px;
 
+}
+.popupFooter div:first-child{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 30%;
+}
+.popupFooter p{
+  text-align: center;
+}
+.popupFooter .checkout{
+  /*height: 50px;*/
+  padding: 10px 0;
+  width: 80%;
+  font-size: 24px;
+  background-color:#ABCB9C;
+  text-align: center;
+}
+.popupFooter .checkout:hover{
+  cursor: pointer;
+  color: #499227;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
