--- a/project/src/app/shoping-card/shoping-card.component.html
+++ b/project/src/app/shoping-card/shoping-card.component.html
@@ -1,12 +1,14 @@
 <!--    <div *ngFor="let item of items">-->
 <!--      <p>{{item.id}}</p>-->
-<mat-dialog-content class="form">
-  <div class="popupHeader line font">
-    <p>shoping-card works!</p>
-    <div mat-dialog-close><mat-icon>close</mat-icon></div>
 
-  </div>
-  <div class="shoppingCart">
+<div class="popupHeader line font">
+  <p>Card</p>
+  <div mat-dialog-close><mat-icon>close</mat-icon></div>
+</div>
+
+<mat-dialog-content class="form">
+  <div *ngIf="items.length >0;else elseBlock">
+  <div class="shoppingCart" *ngFor="let item of items">
     <div class="item line">
       <div class="Buttons">
         <button mat-icon-button>
@@ -16,9 +18,9 @@
           <mat-icon>favorite</mat-icon>
         </button>
       </div>
-      <img src="./assets/cucumber.png" alt="Avatar" class="avatar">
+      <img src="{{item.logos}}" alt="Avatar" class="avatar">
       <div class="descriptions font">
-        <p>Descriptiioeur9owujeriowujioejwqoieujwioeujwoonjfjwjefojwofijwoif</p>
+        <p>{{item.title}}</p>
       </div>
       <div class="plus font">
         <button>+</button>
@@ -26,33 +28,23 @@
         <button>-</button>
       </div>
       <div class="price form">
-        <p> 25грн</p>
+        <p>{{item.price}}</p>
       </div>
-      <!--  <div class="productCard"  *ngFor="let item of items">-->
-      <!--    <div class="image">-->
-      <!--    </div>-->
-      <!--    <a>-->
-      <!--      <img src="{{item.logos}}" alt="Avatar" class="avatar">-->
-      <!--    </a>-->
-      <!--    <div class="nameProduct">-->
-      <!--      <p>Огірець</p>-->
-      <!--    </div>-->
-      <!--    <div class="price">-->
-      <!--      <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16" color="green">-->
-      <!--        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>-->
-      <!--      </svg>-->
-      <!--      <div>-->
-      <!--        <p>25грн</p>-->
-      <!--      </div>-->
-      <!--    </div>-->
-
-      <!--  </div>-->
     </div>
   </div>
   <div class="popupFooter font">
     <div>
-      <p>25$</p>
+      <p>{{priced}} грн</p>
       <div class="checkout">checkout</div>
       </div>
   </div>
+  </div>
+  <ng-template #elseBlock>
+    <div class="emptyCart">
+      <p>Cart is empty
+      But it's never too late to fix it :)
+    </p>
+    </div>
+  </ng-template>
+
 </mat-dialog-content>
