--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -6,6 +6,8 @@
   padding:0;
   box-sizing:border-box;
 }
-
+.custom-test mat-dialog-container{
+  background-color:#F1F1F1;
+}
 html, body { height: 100%; }
 /*body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }*/
