shopingCard Logic and opening popup

--- a/project/src/app/shoping-card/shoping-card.component.html
+++ b/project/src/app/shoping-card/shoping-card.component.html
@@ -1,5 +1,3 @@
-<!--    <div *ngFor="let item of items">-->
-<!--      <p>{{item.id}}</p>-->
 
 <div class="popupHeader line font">
   <p>Card</p>
@@ -11,7 +9,7 @@
   <div class="shoppingCart" *ngFor="let item of items">
     <div class="item line">
       <div class="Buttons">
-        <button mat-icon-button>
+        <button mat-icon-button (click)="deleteProduct(item)">
           <mat-icon>close</mat-icon>
         </button>
         <button mat-icon-button>
