--- a/project/src/app/home/footer/footer.component.html
+++ b/project/src/app/home/footer/footer.component.html
@@ -1,1 +1,100 @@
-<p>footer works!</p>
+<div class="main-content">
+  <div class="main-content-view">
+    <div class="color">
+      <div class="content-footer">
+        <div class="row-content">
+          <div class="column">
+            <p class="header-p"> Графік роботи</p>
+            <div class="line"></div>
+            <ul class="row">
+              <li>
+                <img src="/assets/Logo.png" alt="gray-logo">
+              </li>
+              <li>
+                <p>
+                  Пн-Пт: 10:00-20:00
+                </p>
+                <p>
+                  Сб-Нд: 10:00-18:00
+                </p>
+
+              </li>
+            </ul>
+          </div>
+          <div class="column">
+
+            <p class="header-p"> Про Fresh Store </p>
+            <div class="line"></div>
+            <p>
+              Fresh store– це не лише різноманітна продукція, ретельно підібрана за
+              якістю та смаком. Завдяки своїм знанням про натуральні продукти та багаторічному
+              досвіду ми допоможемо вам вибрати дійсно найкраще.
+            </p>
+          </div>
+          <div class="column contact">
+            <p class="header-p"> Information</p>
+            <div class="line"></div>
+            <ul>
+              <li>
+                Про нас
+              </li>
+              <li>
+                Зв’язатися з нами
+              </li>
+              <li>
+                Правила та умови
+              </li>
+              <li>
+                Політика конфіденційності
+              </li>
+              <li>
+                Доставка та оплата
+              </li>
+            </ul>
+          </div>
+
+          <div class="column">
+
+            <p class="header-p"> Contact </p>
+            <div class="line"></div>
+            <ul>
+              <li>
+                Адреса: м.Київ, вул. Зелена 12
+              </li>
+              <li>
+                Телефон: +380 66 705 7703
+              </li>
+              <li>
+                Email: contactinfo@gmail.com
+              </li>
+            </ul>
+            <p class="header-p"> Messengers</p>
+            <div class="line"></div>
+            <ul class="messengers">
+              <li>
+                <i class="fa-brands fa-twitter mes"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-telegram mes"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-facebook mes"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-facebook-messenger mes"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-whatsapp mes"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="text-content">
+          <p>
+            Всі права захищені. © 2022 The Fresh Store Design Автор: FreshStore
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
