--- a/project/src/app/product/product.component.css
+++ b/project/src/app/product/product.component.css
@@ -54,7 +54,7 @@
 
 .listProduct .product {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(244px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-row-gap: 50px;
   grid-column-gap: 50px;
 }
@@ -67,8 +67,11 @@
   width: 100%;
   background: #F1F1F1;
 }
-
+.productCard a{
+  height: 45%;
+}
 .listProduct .product .productCard img {
+  height: 100%;
   width: 100%;
 }
 .productCard .nameProduct{
