--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -24,7 +24,7 @@
 </header>
 
 <div class="headerSearch">
-  <select id="spec" (change)="test(selectedOption)" [(ngModel)]="selectedOption" >
+  <select id="spec" (change)="Selectively(selectedOption)" [(ngModel)]="selectedOption" >
     <option  *ngFor="let key of keys"  value="{{key}}">{{key}} </option>
   </select>
   <form>
