--- a/project/src/app/product/product.component.css
+++ b/project/src/app/product/product.component.css
@@ -68,11 +68,13 @@
   background: #F1F1F1;
 }
 .productCard a{
-  height: 45%;
+  height: 75%;
+
 }
 .listProduct .product .productCard img {
-  height: 100%;
-  width: 100%;
+  height: 94%;
+  width: 98%;
+  padding-top: 5px;
 }
 .productCard .nameProduct{
   margin: 15px 0 0 17px;
