--- a/project/src/app/product/product-info/product-info.component.html
+++ b/project/src/app/product/product-info/product-info.component.html
@@ -62,10 +62,15 @@
             </svg>
             <p>Купити</p>
           </div>
+<!--          <div class="productButton add-to-favorite button">-->
+<!--            <mat-icon>favorite</mat-icon>-->
+<!--            <div>Додати в мої товари</div>-->
+<!--          </div>-->
           <div class="productButton add-to-favorite button">
             <mat-icon>favorite</mat-icon>
             <div>Додати в мої товари</div>
           </div>
+
         </div>
       </div>
       <div class="content-item">
