--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -7,7 +7,7 @@
     </a>
   </div>
 
-  <nav>
+  <nav class="navigationMenu">
     <div class="navigation">
       <ul>
         <li><a href="#">Home</a></li>
@@ -17,10 +17,10 @@
       </ul>
     </div>
   </nav>
-  <div class="register-btn">
-    <a routerLink="login">Regsiter</a>
-    <a href="#">Login</a>
-  </div>
+<!--  <div class="register-btn">-->
+<!--    <a routerLink="login">Regsiter</a>-->
+<!--    <a href="#">Login</a>-->
+<!--  </div>-->
 </header>
 
 <div class="headerSearch">
