--- a/project/src/app/home/top-bar/top-bar.component.css
+++ b/project/src/app/home/top-bar/top-bar.component.css
@@ -36,6 +36,9 @@ header {
   font-size: 5vmin;
 
 }
+.logo img{
+  width: 100%;
+}
 .logo p{
   font-family: 'Charm', cursive;
   color: #008705;
@@ -58,7 +61,9 @@ input {
 input:hover {
   background: #F1F1F1;
 }
-
+.navigationMenu{
+  margin: 0 auto;
+}
 .navigation ul{
   display: flex;
 }
