--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <header>
   <img src="/assets/1.png" alt="Logo">
   <div class="Welcome">
-    <h1>Добро пожаловать в Fresh Store!</h1>
+    <h1>Ласкаво просимо до Fresh Store!</h1>
   </div>
 </header>
 <body>
