--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -32,8 +32,8 @@
   </form>
   <nav>
     <button mat-icon-button > <mat-icon>favorite</mat-icon></button>
-    <button mat-icon-button > <mat-icon>person</mat-icon></button>
-    <button mat-icon-button (click)="openDialog()"> <mat-icon>shopping_cart</mat-icon></button>
+    <button mat-icon-button  (click) ="openProfile()"> <mat-icon>person</mat-icon></button>
+    <button mat-icon-button  (click) ="openDialog()"> <mat-icon>shopping_cart</mat-icon></button>
   </nav>
 
 </div>
