--- a/project/src/app/shoping-card/shoping-card.component.css
+++ b/project/src/app/shoping-card/shoping-card.component.css
@@ -86,6 +86,10 @@ img{
 .price{
   font-size:  2.5vmin;
 }
+/*mat-dialog-actions{*/
+/*  display: flex;*/
+/*  !*flex-direction: column;*!*/
+/*}*/
 .popupFooter{
   display: flex;
   flex-direction: row;
