--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -21,6 +21,33 @@
 </div>
 <app-product></app-product>
 
+<div class="lines"></div>
+
+<div class="gallery" >
+  <div class="galleryCard">
+      <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+  <div class="galleryCard">
+    <img src="/assets/4.png" alt="Avatar">
+  </div>
+
+
+</div>
 </body>
 <footer>
   <app-footer></app-footer>
