--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -10,9 +10,9 @@
   <nav class="navigationMenu">
     <div class="navigation">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">Додому</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a routerLink="gallery">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
