--- a/project/src/app/home/footer/footer.component.html
+++ b/project/src/app/home/footer/footer.component.html
@@ -32,7 +32,7 @@
             </p>
           </div>
           <div class="column contact">
-            <p class="header-p"> Information</p>
+            <p class="header-p"> Інформація</p>
             <div class="line"></div>
             <ul>
               <li>
@@ -55,7 +55,7 @@
 
           <div class="column">
 
-            <p class="header-p"> Contact </p>
+            <p class="header-p"> Контакти </p>
             <div class="line"></div>
             <ul>
               <li>
