--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -14,39 +14,33 @@
 <div>
 
 </div>
-<div class="lineWithText">
+<div class="lineWithText font">
   <div class="lines"></div>
   <p>Reduces and propositions</p>
   <div class="lines"></div>
 </div>
 <app-product></app-product>
 
-<div class="lines"></div>
 
-<div class="gallery" >
-  <div class="galleryCard">
-      <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
-  <div class="galleryCard">
-    <img src="/assets/4.png" alt="Avatar">
-  </div>
+<div class="lineWithText font">
+  <div class="lines"></div>
+  <p>Про Нас</p>
+  <div class="lines"></div>
+</div>
 
-
+<div class="about font" id="about">
+  <p>
+    Інтернет магазин здорової їжі Fresh Store пропонує лише перевірені товари від надійних виробників. Ми хочемо
+    полегшити ваше життя та допомогти харчуватися з максимальною користю для здоров’я. У нас ви можете знайти якісні
+    органічні, а також безглютенові та безлактозні продукти, завдяки яким ваша їжа буде здоровою та смачною.
+    Ви можете слідкувати за всіма новинами та змінами у роботі мережі на офіційних сторінках у Facebook та Instagram.
+  </p>
+  <p>
+    Ми співпрацюємо з європейським благодійним фондом, компаніями-філантропами, що долучились до допомоги. Фонд
+    закуповує продукти харчування та забезпечує ними найуразливіші верстви населення Києва. Торгова мережа Fresh Store
+    забезпечує налагоджену логістику, щоб їжа надходила до населення у максимально короткий термін, і займається пошуком
+    небайдужих компаній, які мають змогу надати продовольчу гуманітарну допомогу населенню.
+  </p>
 </div>
 </body>
 <footer>
