--- a/project/src/app/shoping-card/shoping-card.component.html
+++ b/project/src/app/shoping-card/shoping-card.component.html
@@ -44,8 +44,8 @@
 </div>
 <ng-template #elseBlock>
   <div class="emptyCart">
-    <p>Cart is empty
-      But it's never too late to fix it :)
+    <p>
+      Кошик порожній, але виправити це ніколи не пізно :)
     </p>
   </div>
 </ng-template>
