--- a/project/src/app/home/top-bar/top-bar.component.html
+++ b/project/src/app/home/top-bar/top-bar.component.html
@@ -1,3 +1,14 @@
+<div class="help">
+  <a
+    href="https://bank.gov.ua/ua/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi"
+    target="_blank" class="link" title="Допоможіть армії ЗСУ">
+    <p>
+    Допомогти ЗСУ || Support Ukraine</p>
+  </a>
+  <svg height="24" width="24" version="1.1" viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg"><rect fill="#0057b7" height="72" width="240" x="0" y="48"></rect><rect fill="#ffd700" height="72" width="240" x="0" y="120"></rect></svg>
+
+
+</div>
 <header>
   <div class="logo">
 <!--    <a href="/" >-->
@@ -11,9 +22,9 @@
     <div class="navigation">
       <ul>
         <li><a href="#">Додому</a></li>
-        <li><a href="#">About</a></li>
-        <li><a routerLink="gallery">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Про нас</a></li>
+        <li><a routerLink="gallery">Галерея</a></li>
+        <li><a href="#">Контакти</a></li>
       </ul>
     </div>
   </nav>
@@ -22,13 +33,12 @@
 <!--    <a href="#">Login</a>-->
 <!--  </div>-->
 </header>
-
 <div class="headerSearch">
   <select id="spec" (change)="Selectively(selectedOption)" [(ngModel)]="selectedOption" >
     <option  *ngFor="let key of keys"  value="{{key}}">{{key}} </option>
   </select>
   <form>
-    <input type="text" placeholder="Search" id="searcher">
+    <input type="text" placeholder="Пошук" id="searcher">
   </form>
   <nav>
     <button mat-icon-button > <mat-icon>favorite</mat-icon></button>
