--- a/project/src/app/product/product-info/product-info.component.html
+++ b/project/src/app/product/product-info/product-info.component.html
@@ -52,7 +52,7 @@
       <div class="content-item">
         <div class="productButtons">
           <div class="productButton price-text button">
-            <p>25грн</p>
+            <p>{{product.price}}</p>
           </div>
           <div class="productButton buy button" (click)="clickByButtons(product)">
             <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-cart4"
