product component Favorite

--- a/project/src/app/favorite/favorite.component.html
+++ b/project/src/app/favorite/favorite.component.html
@@ -1,3 +1,4 @@
-<p>favorite works!</p>
 <!--<app-product></app-product>-->
+<body>
 <app-product-grid [product] ="product" (buttonClick)="favorite($event)"></app-product-grid>
+</body>
