--- a/project/src/app/shoping-card/shoping-card.component.html
+++ b/project/src/app/shoping-card/shoping-card.component.html
@@ -11,7 +11,7 @@
             <button mat-icon-button (click)="deleteProduct(item)">
               <mat-icon>close</mat-icon>
             </button>
-            <button mat-icon-button>
+            <button mat-icon-button (click)="Favorite(item)">
               <mat-icon>favorite</mat-icon>
             </button>
           </div>
