--- a/project/src/app/product/product-info/product-info.component.html
+++ b/project/src/app/product/product-info/product-info.component.html
@@ -66,7 +66,7 @@
 <!--            <mat-icon>favorite</mat-icon>-->
 <!--            <div>Додати в мої товари</div>-->
 <!--          </div>-->
-          <div class="productButton add-to-favorite button">
+          <div class="productButton add-to-favorite button" (click)="clickFavoriteButtons(product)">
             <mat-icon>favorite</mat-icon>
             <div>Додати в мої товари</div>
           </div>
