--- a/project/src/app/shoping-card/shoping-card.component.html
+++ b/project/src/app/shoping-card/shoping-card.component.html
@@ -1,6 +1,8 @@
 <div class="popupHeader line font">
-  <p>Card</p>
-  <div mat-dialog-close><mat-icon>close</mat-icon></div>
+  <p>Кошик</p>
+  <div mat-dialog-close>
+    <mat-icon>close</mat-icon>
+  </div>
 </div>
 <div *ngIf="items.length >0;else elseBlock">
   <mat-dialog-content class="form">
