--- a/project/src/app/home/home.component.css
+++ b/project/src/app/home/home.component.css
@@ -1,9 +1,9 @@
-body{
+body {
   margin-right: 11%;
   margin-left: 11%;
 }
 
-header{
+header {
   width: 100%;
   height: 700px;
   display: flex;
@@ -12,7 +12,8 @@ header{
   position: relative;
   /*background-image: url("");*/
 }
-img {
+
+header img {
   position: absolute;
   height: 700px;
 
@@ -21,13 +22,15 @@ img {
   /*z-index: 1;*/
 
 }
-header .Welcome{
+
+header .Welcome {
   position: absolute;
   /*height: 100px;*/
   /*z-index: 2;*/
   width: 47.4%;
   color: #f3ecec;
-  font-family: 'Montserrat', sans-serif;  font-style: normal;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
   /*font-weight: 900;*/
   /*font-size: 24px;*/
   font-size: 2.5vmin;
@@ -37,11 +40,12 @@ header .Welcome{
   text-align: center;
 }
 
-.lineWithText{
+.lineWithText {
   display: flex;
   flex-direction: row;
   height: 100px;
 }
+
 .lines {
   padding-top: 50px;
   height: 1px;
@@ -50,7 +54,8 @@ header .Welcome{
 
   width: 40%;
 }
-p{
+
+p {
   padding-top: 35px;
   text-align: center;
   margin: 0 auto;
