--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -3,6 +3,9 @@
 <router-outlet></router-outlet>
 
 
+<!--<app-order></app-order>-->
+
+
 <!--амгнрвирпаивор-->
 <!--&lt;!&ndash;<a href="/" class="logo"> <img src="file:///C:/Users/Vlad/WebstormProjects/coursework/project/res/log.jpg" alt="test"></a>&ndash;&gt;-->
 <!--<img src="./assets/1.jpg" alt="смайлик" height="30" width="30">-->
