--- a/project/src/app/product/product-grid/product-grid.component.html
+++ b/project/src/app/product/product-grid/product-grid.component.html
@@ -5,7 +5,8 @@
         <img src="{{counter.logos}}" alt="Avatar" class="avatar"  routerLink="/detail/{{counter.id}}">
       </a>
       <div class="nameProduct">
-        <p>{{counter.title}}</p>
+        <p>
+          {{counter.title}}</p>
       </div>
       <div class="price" (click)="favorite(counter)">
         <svg *ngIf="counter.clicked==false;else elseBlock" xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16" >
