--- a/project/src/app/order/order.component.css
+++ b/project/src/app/order/order.component.css
@@ -1,7 +1,96 @@
+*{
+  margin: 0;
+  padding: 0;
 
-body{
-  background-color: gold;
 }
+.main-content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.main-content-view {
+  display: flex;
+  justify-content: center;
+}
+
+.main-content-view .width {
+  width: 80%;
+  margin: 0 15px;
+
+}
+
+.width .content-order {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+}
+
+.width p.text,
+.width h2.text,
+.width h3.text {
+  padding: 0 5px;
+  margin-left: 20px;
+}
+
+.line {
+  height: 1px;
+  border-radius: 5px;
+  background-color: rgb(223, 223, 223);
+  width: 100%;
+  margin: 5px 10px;
+}
+
+.content-row {
+  display: flex;
+  margin: 20px 0;
+  flex-direction: row;
+}
+.content-row >div{
+  width: max(30%, 150px);
+  padding: 5px 10px;
+  margin-left: 10px;
+
+}
+.content-row >div label{
+  margin-bottom: 5px;
+}
+.content-row .column{
+  display: flex;
+  flex-direction: column;
+}
+.width .orders{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: flex-end;
+
+}
+.width .one{
+  width: 80%;
+  margin: 10px 5px;
+}
+.width .select{
+  border: 1px solid gray;
+  border-radius: 20px;
+  padding: 15px;
+}
+.width .content-input{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width:900px) {
+
+  .main-content-view .width {
+    width: 100%;
+  }
+}
+
+
 .form{
   padding: 0;
 }
