--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 </div>
 <div class="lineWithText font">
   <div class="lines"></div>
-  <p>Reduces and propositions</p>
+  <p>Каталог товарів</p>
   <div class="lines"></div>
 </div>
 <app-product></app-product>
