--- a/project/src/app/order/order.component.html
+++ b/project/src/app/order/order.component.html
@@ -112,8 +112,7 @@
         </div>
         <p class="text">
           <button [disabled]="NewForm.invalid" class="registerbtn" id="submit-button" mat-button color="primary"
-                  (click)="Test()">Register
-          </button>
+                  (click)="Test()">оформити замовлення</button>
         </p>
       </div>
     </div>
